fortune/fortune-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
  labels:
    app: fortune
spec:
  containers:
    - name: html-generator
      image: hjklo0220/fortune
      volumeMounts:
        - mountPath: /var/www
          name: html

    - name: web-server
      image: nginx:alpine
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
          readOnly: true
  volumes:
    - name: html
      emptyDir: {}
