fortune/fortune-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune
spec:
  type: NodePort
  selector:
    app: fortune
  ports:
    - port: 12380
      targetPort: 80
