fortune/fortune-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lion.fortune.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fortune
                port:
                  number: 12380
